--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,59 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Dealership Management</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Car Dealership Management</h1>
-        
-        <div class="form-container">
-            <h2>Add/Edit Car</h2>
-            <form id="carForm">
-                <input type="hidden" id="carId">
-                <div class="form-group">
-                    <input type="text" id="make" placeholder="Make" required>
-                </div>
-                <div class="form-group">
-                    <input type="text" id="model" placeholder="Model" required>
-                </div>
-                <div class="form-group">
-                    <input type="number" id="year" placeholder="Year" required>
-                </div>
-                <div class="form-group">
-                    <input type="number" step="0.01" id="price" placeholder="Price" required>
-                </div>
-                <div class="form-group">
-                    <textarea id="description" placeholder="Description"></textarea>
-                </div>
-                <div class="form-group">
-                    <button type="submit" id="submitBtn">Add Car</button>
-                    <button type="button" id="cancelBtn" style="display: none;">Cancel</button>
-                </div>
-            </form>
-        </div>
 
-        <div class="table-container">
-            <h2>Car Inventory</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Make</th>
-                        <th>Model</th>
-                        <th>Year</th>
-                        <th>Price</th>
-                        <th>Description</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody id="carTableBody">
-                </tbody>
-            </table>
-        </div>
-    </div>
+<head>
+    <meta charset="UTF-8" />
+    <title>Device Manager</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <h1>Device List</h1>
+
+    <form id="deviceForm">
+        <input type="text" id="name" placeholder="Name" required />
+        <input type="text" id="type" placeholder="Type" required />
+        <input type="number" id="price" placeholder="Price" required />
+        <button type="submit">Add Device</button>
+    </form>
+
+    <table id="deviceTable">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Type</th>
+                <th>Price</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
     <script src="script.js"></script>
 </body>
+
 </html>
